# doc-visualizer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  LICENSE  README.md  Taskfile.yml  docker-compose.yml  implementation_plan.md  pyproject.toml
app/doc_visualizer/: __init__.py
app/doc_visualizer/api/: __init__.py  app.py  executor.py  jobs.py  main.py  models.py
app/doc_visualizer/frontend/: __init__.py  app.py
app/doc_visualizer/phase1/: __init__.py  grobid_gateway.py  metadata.py  models.py  pipeline.py  protocols.py  run_batch.py  section_classifier.py  tei_parser.py  text_utils.py  types.py
app/doc_visualizer/phase2/: __init__.py  chunking.py  models.py  protocols.py  run_batch.py  service.py  strategies.py  vector_math.py
app/doc_visualizer/phase3/: __init__.py  engines.py  models.py  preprocessing.py  protocols.py  run_batch.py
app/doc_visualizer/phase4/: __init__.py  embeddings.py  models.py  protocols.py  run_batch.py  service.py  summarizers.py  vector_math.py
docker/app/: Dockerfile
docker/grobid/: Dockerfile  client-config.json
tests/: test_api.py  test_grobid_gateway.py  test_metadata_writer.py  test_phase2_chunking_and_strategies.py  test_phase2_run_batch.py  test_phase2_service.py  test_phase2_vector_math.py  test_phase3_preprocessing.py  test_phase3_run_batch.py  test_phase4_run_batch.py  test_phase4_service.py  test_phase4_vector_math.py  test_phase5_clusterers.py  test_phase5_reducers.py  test_phase5_run_batch.py  test_phase5_service.py  test_pipeline.py  test_run_batch.py  test_section_classifier.py  test_tei_parser.py
(+9 files in other folders)
